Release History
===============


2.0b1 (unreleased)
------------------

- Drop Python 2 support. It's time to go for Python 3. Python 2 users should
  stick with the last released 1.x version.
- Rework packaging. We now rely on pip and the standard `PyPUG`_ procedures.
- Remove `namedtuple` and use plain objects instead (#8).
- Use `tox` for matrix testing.

.. _PyPUG: https://packaging.python.org/en/latest/


1.3 (unreleased)
----------------

This is going to be a major feature release. Reworked output generation to
provide more flexibility and greater control. Details of output formatting are
slightly incompatible to the 1.2 series.

- If Result.hint is set, it overrides any output from the originating metric.
  Metric.__str__ is consulted for output generation only when Result.hint is
  None (#13299).
- Deprecate Metric.description() (#13299).
- If Context.fmt_metric is a callable, it is now called with three parameters
  (metric, context, state) (#12659).
- Update docs to reflect the new project tracker URLs and changed author's
  email address.
- Include Debian packaging stuff (#10).


1.2.2 (2014-05-27)
------------------

- Mention that nagiosplugin also runs with Python 3.4 (no code changes
  necessary).
- Make name prefix in status output optional by allowing to assign None to
  Check.name.
- Accept bare metric as return value from Resource.probe().
- Fix bug where Context.describe() was not used to obtain metric description
  (#13162).


1.2.1 (2014-03-19)
------------------

- Fix build failures with LANG=C (#13140).
- Remove length limitation of perfdata labels (#13214).
- Fix formatting of large integers as Metric values (#13287).
- Range: allow simple numerals as argument to Range() (#12658).
- Cookie: allow for empty state file specification (#12788).


1.2 (2013-11-08)
----------------

- New `Summary.empty` method is called if there are no results present (#11593).
- Improve range violation wording (#11597).