@@ -4,11 +4,7 @@ from nagiosplugin.cookie import Cookie
 import codecs
 import os
 import tempfile
-
-try:
-    import unittest2 as unittest
-except ImportError:  # pragma: no cover
-    import unittest
+import unittest
 
 
 class CookieTest(unittest.TestCase):
