@@ -1,11 +1,7 @@
 from nagiosplugin.logtail import LogTail
 import nagiosplugin
 import tempfile
-
-try:
-    import unittest2 as unittest
-except ImportError:  # pragma: no cover
-    import unittest
+import unittest
 
 
 class LogTailTest(unittest.TestCase):
